# ldgr

./: .env.example  .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  README.md  SECURITY.md  docker-compose.yml
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/skills/pr-ready/: SKILL.md
.github/workflows/: audit.yml  ci.yml  docker-publish.yml  release.yml
apps/ios/: .gitignore  README.md  project.yml
apps/ios/LdgrShared/Sources/: WatchSummary.swift
apps/ios/ldgr/: Info.plist  ldgr.entitlements
apps/ios/ldgr-macos/: Info.plist  ldgr-macos.entitlements
apps/ios/ldgr/Sources/: AppState.swift  LdgrApp.swift  PlatformCompat.swift  Typealiases.swift
apps/ios/ldgrWatch/: Info.plist
apps/ios/ldgrWatch/Sources/: LdgrWatchApp.swift  PhoneConnectivityManager.swift
apps/ios/ldgrWatch/Widgets/: LdgrWidgets.swift  ldgrWatchWidgets.entitlements
apps/ios/ldgrWidgets/: ldgrWidgets.entitlements
apps/ios/ldgrWidgets/Sources/: LdgrWidgets.swift
apps/web/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.tsbuildinfo
apps/web/public/: sw.js
apps/web/src/app/: globals.css  (+2 more)
apps/web/test/: admin-api.mjs  integration.mjs  sync-wasm.mjs
bindings/swift/: Package.swift  build-xcframework.sh
crates/ldgr-cli/: Cargo.toml
crates/ldgr-cli/src/: config.rs  convert.rs  db.rs  lib.rs  main.rs  market_fetch.rs  session.rs  theme.rs
crates/ldgr-cli/src/commands/: accounts.rs  add.rs  balance.rs  balancesheet.rs  cache.rs  config.rs  delete.rs  devices.rs  export.rs  goals.rs  import.rs  incomestatement.rs  init.rs  lock.rs  mod.rs  portfolio.rs  reconcile.rs  register.rs  rules.rs  status.rs  sync.rs  unlock.rs  validate.rs  watch.rs
crates/ldgr-cli/src/render/: mod.rs  pdf.rs
crates/ldgr-cli/src/sync/: bridge.rs  dropbox.rs  mod.rs  server.rs  webdav.rs
crates/ldgr-cli/src/tui/: chart.rs  event.rs  mod.rs  portfolio.rs  watchlist.rs
crates/ldgr-cli/tests/: server_sync.rs  sync_round_trip.rs
crates/ldgr-core/: Cargo.toml
crates/ldgr-core/examples/: bench_argon2.rs
crates/ldgr-core/src/: lib.rs
crates/ldgr-core/src/accounting/: lots.rs  mod.rs  parser.rs  query.rs  report_document.rs  reports.rs  types.rs
crates/ldgr-core/src/budget/: engine.rs  mod.rs  recurring.rs
crates/ldgr-core/src/crypto/: crockford.rs  emergency_kit.rs  envelope.rs  errors.rs  kdf.rs  keys.rs  mod.rs  recovery.rs  secret_key.rs  two_skd.rs  vault.rs  wrap.rs
crates/ldgr-core/src/export/: csv.rs  hledger.rs  json.rs  mod.rs
crates/ldgr-core/src/goals/: mod.rs  tracker.rs
crates/ldgr-core/src/import/: csv.rs  dedup.rs  mod.rs  ofx.rs  profile.rs  rules.rs
crates/ldgr-core/src/loans/: amortization.rs  mod.rs  payoff.rs  refinance.rs  split.rs
crates/ldgr-core/src/market/: cache.rs  chain.rs  coingecko.rs  ecb.rs  mod.rs  persist.rs  proxy.rs  registry.rs  types.rs  yahoo.rs
crates/ldgr-core/src/storage/: accounts.rs  budgets.rs  error.rs  goals.rs  journal_import.rs  mod.rs  prices.rs  schema.rs  sync.rs  transactions.rs
crates/ldgr-core/src/sync/: conflicts.rs  events.rs  framing.rs  mod.rs  onboarding.rs  pairing.rs  payload.rs  pipeline.rs  snapshot.rs  transport.rs
crates/ldgr-core/src/sync/server/: client.rs  mod.rs  protocol.rs  srp.rs
crates/ldgr-core/tests/: conformance.rs  sync_vectors.rs  vault_vectors.rs
crates/ldgr-core/tests/fixtures/sync/: account_payload_v1.json  event_batch_v1.json  manifest.json  register_request_1secret_v1.json  register_request_2skd_v1.json  transaction_payload_v1.json
crates/ldgr-ffi/: Cargo.toml  build.rs
crates/ldgr-ffi/src/: ldgr.udl  lib.rs  sync.rs
crates/ldgr-server/: Cargo.toml  Dockerfile
crates/ldgr-server/src/: config.rs  error.rs  lib.rs  main.rs  settings.rs  state.rs
crates/ldgr-server/src/api/: admin.rs  auth.rs  batches.rs  devices.rs  mod.rs  relay.rs  server.rs  snapshots.rs  vaults.rs
crates/ldgr-server/src/auth/: middleware.rs  mod.rs  session.rs  srp.rs
crates/ldgr-server/src/storage/: mod.rs  schema.rs
crates/ldgr-server/tests/: account_model.rs  admin_api.rs  device_pairing_e2e.rs  ffi_sync_client_e2e.rs  server_info.rs  server_sync_client_e2e.rs  srp_handshake.rs  sync_pipeline_e2e.rs  two_skd_handshake.rs
crates/ldgr-server/tests/common/: mod.rs
crates/ldgr-wasm/: Cargo.toml
crates/ldgr-wasm/src/: lib.rs  sync.rs
crates/uniffi-bindgen/: Cargo.toml
docs/: journal-subset.md  ldgr-architecture.md  market-data.md  provider-development-guide.md  roadmap.md  self-hosting.md  sync-blob-format.md  sync-e2e-tests.md  sync-setup.md
docs/adr/: 001-source-of-truth.md  002-hledger-integration.md  003-sync-conflict-resolution.md  004-data-model.md  005-platform-boundaries.md  006-licensing.md  007-market-data-caching.md  008-self-hosting-and-account-auth.md  009-plugin-extension-architecture.md
docs/benchmarks/: argon2-parameters.md
docs/security/: sync-test-vectors.md  test-vectors.md  threat-model.md  vault-format-guide.md  vault-format-spec.md  vault-overview.md
docs/security/diagrams/: README.md
examples/ldgr-provider-example/: Cargo.toml  README.md
examples/ldgr-provider-example/src/: lib.rs
infra/market-proxy/: .dev.vars.example  README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
infra/market-proxy/src/: cache.ts  index.ts  normalize.ts  providers.ts  throttle.ts  types.ts
infra/market-proxy/test/: helpers.ts  normalize.test.ts  throttle.test.ts  worker.test.ts
scripts/: release.ps1
tests/conformance/journals/: auto_balance.journal  balance_assertions.journal  basic.journal  codes.journal  complete.journal  directives.journal  multi_currency.journal  prefix_symbols.journal  slash_dates.journal  status.journal  tags_comments.journal  unsupported_auto.journal  unsupported_include.journal  unsupported_periodic.journal
tests/fixtures/vault/: manifest.json  recovery-55.txt  recovery-aa.txt  recovery-ff.txt  recovery-seq.txt  recovery-zeros.txt
(+85 files in other folders)
