[workspace]
resolver = "2"
members = [
    "crates/ldgr-core",
    "crates/ldgr-cli",
    "crates/ldgr-ffi",
    "crates/ldgr-server",
    "crates/ldgr-wasm",
    "crates/uniffi-bindgen",
]
exclude = [
    "examples/ldgr-provider-example",
]

[workspace.package]
version = "1.2.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
repository = "https://github.com/kafkade/ldgr"
homepage = "https://github.com/kafkade/ldgr"
keywords = ["personal-finance", "accounting", "encryption", "hledger", "bookkeeping"]
categories = ["command-line-utilities", "cryptography", "finance"]

[workspace.dependencies]
# Crypto (RustCrypto)
aes-gcm = "0.10"
argon2 = "0.5"
hkdf = "0.13"
sha2 = "0.11"
rand = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets", "getrandom"] }
zeroize = { version = "1", features = ["derive"] }

# Data
rust_decimal = { version = "1", features = ["serde-with-str"] }
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rpassword = "7"
comfy-table = "7"
indicatif = "0.18"

# Async
async-trait = "0.1"
futures = "0.3"

# FFI
uniffi = "0.31"

# Server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow these common pedantic lints
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
