[package]
name = "ldgr-cli"
description = "CLI interface for ldgr — zero-knowledge bookkeeping"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["command-line-utilities", "finance"]
readme = "../../README.md"

[[bin]]
name = "ldgr"
path = "src/main.rs"

[dependencies]
ldgr-core = { path = "../ldgr-core", version = "1.0.0", features = ["full"] }

# CLI
clap.workspace = true
ratatui.workspace = true
crossterm.workspace = true
reqwest.workspace = true
rpassword.workspace = true
comfy-table.workspace = true
indicatif.workspace = true

# Async
async-trait.workspace = true

# Runtime
tokio.workspace = true
anyhow.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[lints]
workspace = true

[dev-dependencies]
ldgr-server = { path = "../ldgr-server" }
axum.workspace = true
