[package]
name = "ldgr-core"
description = "Core library for ldgr: crypto, accounting, storage, sync — zero I/O"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["core"]
core = []
sync = []
import-export = []
market = []
loans = []
budget = []
goals = []
full = ["core", "sync", "import-export", "market", "loans", "budget", "goals"]

[dependencies]
# Crypto
aes-gcm.workspace = true
argon2.workspace = true
hkdf.workspace = true
sha2.workspace = true
x25519-dalek.workspace = true
zeroize.workspace = true

# Data
rust_decimal.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true

# Errors
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
