[package]
name = "ldgr-ffi"
description = "UniFFI bindings for ldgr-core — zero-knowledge bookkeeping"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "ldgr_ffi"

[dependencies]
ldgr-core = { path = "../ldgr-core", features = ["full"] }
uniffi.workspace = true
rusqlite.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
tempfile = "3"

[lints.rust]
# UniFFI scaffolding requires #[unsafe(no_mangle)] for FFI symbol exports
unsafe_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
