[package]
name = "ldgr-server"
description = "Self-hosted sync server for ldgr — encrypted blob store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "AGPL-3.0-only"
repository.workspace = true
publish = false

[dependencies]
ldgr-core = { path = "../ldgr-core", features = ["core", "sync"] }

# Server
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Data
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true

# Storage
rusqlite.workspace = true

# Crypto (SRP-6a)
sha2.workspace = true
rand.workspace = true
num-bigint = { version = "0.4", default-features = false }

# Errors
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
# In-process integration testing: drive the router via tower's oneshot and the
# core SRP-6a client (no sockets, no real HTTP).
ldgr-core = { path = "../ldgr-core", features = ["core", "sync"] }
# FFI-level e2e test drives the UniFFI `LdgrSyncClient` through its foreign
# async-sender seam against this same in-process router. Test-only edge.
ldgr-ffi = { path = "../ldgr-ffi" }
tower = { version = "0.5", features = ["util"] }
async-trait.workspace = true

[lints]
workspace = true
