[package]
name = "ldgr-server"
description = "Self-hosted sync server for ldgr — encrypted blob store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "AGPL-3.0-only"
repository.workspace = true
publish = false

[dependencies]
ldgr-core = { path = "../ldgr-core", features = ["core", "sync"] }

# Server
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Data
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true

# Storage
rusqlite.workspace = true

# Crypto (SRP-6a)
sha2.workspace = true
rand.workspace = true
num-bigint = { version = "0.4", default-features = false }

# Errors
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
# In-process integration testing: drive the router via tower's oneshot and the
# core SRP-6a client (no sockets, no real HTTP). The `sqlite` feature is test-only
# here — it unlocks `sync::pipeline` (compose/apply) and the storage `_with_sync`
# emitters so the e2e suite can drive the REAL pipeline through the booted router.
# It is NOT enabled for the production server build (the server never touches the
# canonical SQLite vault), so this does not change the shipped binary.
ldgr-core = { path = "../ldgr-core", features = ["core", "sync", "sqlite"] }
# Post-merge double-entry invariant checks parse posting amounts as exact
# decimals (never floats) — see ADR-003 §"Post-merge validation".
rust_decimal = { workspace = true }
# FFI-level e2e test drives the UniFFI `LdgrSyncClient` through its foreign
# async-sender seam against this same in-process router. Test-only edge.
ldgr-ffi = { path = "../ldgr-ffi" }
tower = { version = "0.5", features = ["util"] }
async-trait.workspace = true
# The FFI-level e2e composes a REAL encrypted batch from an on-disk `LdgrVault`
# (two devices sharing one vault file) before pushing it through the transport,
# so it needs scratch directories.
tempfile = "3"

[lints]
workspace = true
